--- a/app/src/main/res/layout/activity_lead_iitest.xml
+++ b/app/src/main/res/layout/activity_lead_iitest.xml
@@ -259,7 +259,10 @@
             <TextView
                 android:id="@+id/result"
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"
+                android:layout_height="200dp"
+                android:scrollbars="vertical"
+                android:padding="2dp"
+                android:textSize="12sp"
                 app:layout_constraintTop_toBottomOf="@id/activity_main_btn_start_test"
                 />
 
