--- a/app/src/main/res/layout/activity_twelve_lead_test.xml
+++ b/app/src/main/res/layout/activity_twelve_lead_test.xml
@@ -472,8 +472,9 @@
 
             <TextView
                 android:id="@+id/report_conclusion"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
+                android:layout_width="match_parent"
+                android:layout_height="300dp"
+                android:textSize="12sp"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintTop_toBottomOf="@id/activity_main_btn_start_test"/>
